@@ -1,3 +1,3 @@
-<settings>
-   <setting id="lr_nice" value="10" />
+<settings version="2">
+    <setting id="lr_nice">10</setting>
 </settings>
